error.txt
A fatal error has occured, and the game has crashed.

ERROR REPORT: 
The error message was: <class 'SyntaxError'>
Error details:
SyntaxError('invalid syntax', ('<input>', 1, 3, '--\n'))
Stacktrace:
Traceback (most recent call last):
  File "C:\Users\alihamza\AppData\Local\Programs\Python\Python37-32\lib\code.py", line 63, in runsource
    code = self.compile(source, filename, symbol)
  File "C:\Users\alihamza\AppData\Local\Programs\Python\Python37-32\lib\codeop.py", line 168, in __call__
    return _maybe_compile(self.compiler, source, filename, symbol)
  File "C:\Users\alihamza\AppData\Local\Programs\Python\Python37-32\lib\codeop.py", line 99, in _maybe_compile
    raise err1
  File "C:\Users\alihamza\AppData\Local\Programs\Python\Python37-32\lib\codeop.py", line 87, in _maybe_compile
    code1 = compiler(source + "\n", filename, symbol)
  File "C:\Users\alihamza\AppData\Local\Programs\Python\Python37-32\lib\codeop.py", line 133, in __call__
    codeob = compile(source, filename, symbol, self.flags, 1)
  File "<input>", line 1
    --
     ^
SyntaxError: invalid syntax
